# summa

./: Cargo.toml
summa_cli/: Cargo.toml
summa_cli/src/: main.rs
summa_cognition/: Cargo.toml
summa_cognition/src/: lib.rs  main.rs
summa_store/: Cargo.toml  build.rs
summa_store/src/: lib.rs
