[package]
name = "summa_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
summa_store = { path = "../summa_store" }
summa_cognition = { path = "../summa_cognition" }

color-eyre = { version = "0.6.2", default-features = false }

